templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: back
  name: survey-back
  labels:
    app: survey-back
spec:
  replicas: 3
  selector:
    matchLabels:
      app: survey-back
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8082'
        prometheus.io/path: "/actuator/prometheus"
      labels:
        app: survey-back
    spec:
      imagePullSecrets:
        - name: docker-pull-secret
      containers:
        - name: survey-back
          image: hamgeonwook/survey-back:26
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 500m
              memory: 5000Mi
          ports:
            - containerPort: 8080
              name: spring
            - containerPort: 8082
              name: spring-actuator
        - name: redis-container
          image: redis:latest
          ports:
            - containerPort: 6379
---
piVersion: apps/v1
kind: Deployment
metadata:
  namespace: back
  name: user-back
spec:
  replicas: 3
  selector:
    matchLabels:
      app: user-back
  template:
    metadata:
      labels:
        app: user-back
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8082'
        prometheus.io/path: "/actuator/prometheus"
    spec:
      imagePullSecrets:
        - name: docker-pull-secret
      containers:
        - name: user-back
          image: hamgeonwook/user-back:26
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 500m
            limits:
              cpu: 500m
          ports:
            - containerPort: 8080
              name: spring
            - containerPort: 8082
              name: spring-actuator
        - name: redis-container
          image: redis:latest
          ports:
            - containerPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-back
spec:
  replicas: 3
  selector:
    matchLabels:
      app: gateway-back
  template:
    metadata:
      labels:
        app: gateway-back
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8082'
        prometheus.io/path: "/actuator/prometheus"
    spec:
      imagePullSecrets:
        - name: docker-pull-secret
      containers:
        - name: gateway-back
          image: hamgeonwook/gateway:26
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: spring
            - containerPort: 8082
              name: spring-actuator
          resources:
            requests:
              cpu: 500m
            limits:
              cpu: 500m
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: response-back
spec:
  replicas: 3
  selector:
    matchLabels:
      app: response-back
  template:
    metadata:
      labels:
        app: response-back
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8082'
        prometheus.io/path: "/actuator/prometheus"
    spec:
      imagePullSecrets:
        - name: docker-pull-secret
      containers:
        - name: response-back
          image: hamgeonwook/response-back:26
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 500m
            limits:
              cpu: 500m
          ports:
            - containerPort: 8080
              name: spring
            - containerPort: 8082
              name: spring-actuator
        - name: redis-container
          image: redis:latest
          ports:
            - containerPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: response-back
spec:
  replicas: 3
  selector:
    matchLabels:
      app: response-back
  template:
    metadata:
      labels:
        app: response-back
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8082'
        prometheus.io/path: "/actuator/prometheus"
    spec:
      imagePullSecrets:
        - name: docker-pull-secret
      containers:
        - name: response-back
          image: hamgeonwook/response-back:26
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 500m
            limits:
              cpu: 500m
          ports:
            - containerPort: 8080
              name: spring
            - containerPort: 8082
              name: spring-actuator
        - name: redis-container
          image: redis:latest
          ports:
            - containerPort: 6379
---
