templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: back
  name: response-back-service
  labels:
    app: response-back-service
spec:
  ports:
    - name: spring
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: spring-actuator
      port: 8082 # service의 port
      targetPort: 8082 # pod의 target port
      protocol: TCP
  selector:
    app: response-back
---
apiVersion: v1
kind: Service
metadata:
  namespace: back
  name: gateway-service
  labels:
    app: gateway-service
spec:
  type: LoadBalancer
  ports:
    - name: spring
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: spring-actuator
      port: 8082 # service의 port
      targetPort: 8082 # pod의 target port
      protocol: TCP
  selector:
    app: gateway-back
---
apiVersion: v1
kind: Service
metadata:
  namespace: back
  name: survey-back-service
  labels:
    app: survey-back-service
spec:
  ports:
    - name: spring
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: spring-actuator
      port: 8082 # service의 port
      targetPort: 8082 # pod의 target port
      protocol: TCP
  selector:
    app: survey-back
---
apiVersion: v1
kind: Service
metadata:
  namespace: back
  name: user-back-service
  labels:
    app: user-back-service
spec:
  ports:
    - name: spring
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: spring-actuator
      port: 8082 # service의 port
      targetPort: 8082 # pod의 target port
      protocol: TCP
  selector:
    app: user-back
---
apiVersion: v1
kind: Service
metadata:
  namespace: back
  name: analysis-back-service
  labels:
    app: analysis-back-service
spec:
  ports:
    - name: spring
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: spring-actuator
      port: 8082 # service의 port
      targetPort: 8082 # pod의 target port
      protocol: TCP
  selector:
    app: analysis-back
---
